# web_project_auction

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  config.py  docker-compose-local.yml  docker-compose.yml  dockerfile  package.json  pyproject.toml  requirements.txt
auction/: models.py  permissions.py  serializers.py  urls.py  views.py
auction/migrations/: 0001_initial.py  0002_alter_auction_bid.py
backend/: asgi.py  settings.py  urls.py  wsgi.py
user/: models.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_user_user_image.py
